# trade-approval-system

./: .gitignore  Cargo.toml  LICENSE.md  README.md  devenv.nix
docs/: ADR.md  LLM-use.md  devlog.md
examples/: sled.rs
sled/: db  snap.0000000000001DCA  snap.0000000000003D89
src/: builder.rs  context.rs  error.rs  lib.rs  service.rs  trade.rs  trade_context.rs  types.rs  utils.rs  witness_set.rs
tests/: scenarios.rs  smoke_unit_tests.rs  trade_details_property_tests.rs  witness_chain_property_tests.rs
