[package]
name = "trade-approval"
version = "0.1.0"
edition = "2024"
description = "A trade approval system"

[dependencies]
anyhow = "1.0.100"
bech32 = "0.11.0"
chrono = "0.4.42"
hex = "0.4.3"
minicbor = { version = "2.1.1", features = ["derive", "std"] }
sha256 = "1.6.0"
sled = "0.34.7"
thiserror = "2.0.17"
uuid7 = "1.3.0"
